--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap');
-
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 body{
   font-family:"Montserrat Alternates",sans-serif !important ;
   background-color: #131722;
